--- a/dev-ruby/eruby/ChangeLog
+++ b/dev-ruby/eruby/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/eruby
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/eruby/ChangeLog,v 1.10 2004/04/30 16:32:25 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/eruby/ChangeLog,v 1.11 2004/05/02 16:24:49 fmccor Exp $
+
+  02 May 2004; Ferris McCormick <fmccor@gentoo.org> eruby-1.0.5.ebuild:
+  Marked stable on sparc.
 
   01 May 2004; Mamoru KOMACHI <usata@gentoo.org> eruby-1.0.3-r1.ebuild,
   eruby-1.0.5.ebuild:
