--- a/app-crypt/opencdk/ChangeLog
+++ b/app-crypt/opencdk/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-crypt/opencdk
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-crypt/opencdk/ChangeLog,v 1.17 2004/04/26 15:49:27 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-crypt/opencdk/ChangeLog,v 1.18 2004/05/02 21:11:14 geoman Exp $
+
+  02 May 2004; Stephen P. Becker <geoman@gentoo.org> opencdk-0.5.3.ebuild:
+  Added ~mips keyword.
 
   26 Apr 2004; Aron Griffis <agriffis@gentoo.org> opencdk-0.5.1.ebuild,
   opencdk-0.5.3.ebuild:
