--- a/sys-apps/module-init-tools/ChangeLog
+++ b/sys-apps/module-init-tools/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for sys-apps/module-init-tools
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.59 2004/04/26 19:27:17 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.60 2004/05/03 20:53:27 avenj Exp $
+
+*module-init-tools-3.0-r1
+  03 May 2004; Jon Portnoy <avenj@gentoo.org> module-init-tools-3.0-r1.ebuild :
+  Install static insmod for 2.4 kernels. Fix from Sascha Silbe in bug
+  #45279.
 
   26 Apr 2004; Aron Griffis <agriffis@gentoo.org>
   module-init-tools-0.9.15_pre4.ebuild, module-init-tools-3.0.ebuild,
