--- a/dev-python/pyme/ChangeLog
+++ b/dev-python/pyme/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyme
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pyme/ChangeLog,v 1.3 2003/04/04 18:31:09 liquidx Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pyme/ChangeLog,v 1.4 2004/05/04 11:27:44 kloeri Exp $
+
+  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> pyme-0.5.1.ebuild:
+  Remove default S.
 
 *pyme-0.5.1 (26 Nov 2002)
 
