--- a/app-emacs/mell/ChangeLog
+++ b/app-emacs/mell/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/mell
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/mell/ChangeLog,v 1.4 2004/04/25 14:36:32 usata Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/mell/ChangeLog,v 1.5 2004/05/04 15:38:43 kloeri Exp $
+
+  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> mell-1.0.0.ebuild:
+  Stable on alpha.
 
   25 Apr 2004; Mamoru KOMACHI <usata@gentoo.org> mell-1.0.0.ebuild:
   Added ~alpha keyword. Don't assign default to S
