--- a/app-misc/secure-delete/ChangeLog
+++ b/app-misc/secure-delete/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-misc/secure-delete
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-misc/secure-delete/ChangeLog,v 1.5 2003/12/30 11:52:33 seemant Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-misc/secure-delete/ChangeLog,v 1.6 2004/05/04 17:47:35 kloeri Exp $
+
+  04 May 2004; Bryan Østergaard <kloeri@gentoo.org> secure-delete-3.0.ebuild:
+  Stable on alpha.
 
   30 Dec 2003; Seemant Kulleen <seemant@gentoo.org> secure-delete-3.0.ebuild:
   typo fix, remove useless sed expressions, and chmod u+w to allow to compile
