--- a/dev-util/monodoc/ChangeLog
+++ b/dev-util/monodoc/ChangeLog
@@ -1,6 +1,11 @@
 # ChangeLog for dev-util/monodoc
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodoc/ChangeLog,v 1.9 2004/04/01 21:40:29 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodoc/ChangeLog,v 1.10 2004/05/05 05:57:56 latexer Exp $
+
+*monodoc-0.15 (05 May 2004)
+
+  05 May 2004; Peter Johanson <latexer@gentoo.org> monodoc-0.15.ebuild:
+  Beta1 stuff.
 
   01 Apr 2004; Peter Johanson <latexer@gentoo.org> monodoc-0.13.ebuild:
   Small fix to dep on 0.18 in portage now.
