--- a/dev-util/monodoc/ChangeLog
+++ b/dev-util/monodoc/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/monodoc
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/monodoc/ChangeLog,v 1.10 2004/05/05 05:57:56 latexer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/monodoc/ChangeLog,v 1.11 2004/05/05 10:18:37 dholm Exp $
+
+  05 May 2004; David Holm <dholm@gentoo.org> monodoc-0.15.ebuild:
+  Added to ~ppc.
 
 *monodoc-0.15 (05 May 2004)
 
