--- a/dev-python/python-selinux/ChangeLog
+++ b/dev-python/python-selinux/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-python/python-selinux
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/python-selinux/ChangeLog,v 1.18 2004/04/30 20:27:00 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/python-selinux/ChangeLog,v 1.19 2004/05/06 01:55:00 pebenito Exp $
+
+  05 May 2004; Chris PeBenito <pebenito@gentoo.org>
+  -files/python-selinux-2.10.c.bz2, -files/python-selinux-2.12.c.bz2,
+  -python-selinux-2.10.ebuild, -python-selinux-2.12.ebuild,
+  python-selinux-2.14.ebuild:
+  Mark stable.
 
 *python-selinux-2.14 (30 Apr 2004)
 
