--- a/dev-python/twisted/ChangeLog
+++ b/dev-python/twisted/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for dev-python/twisted
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.33 2004/04/21 23:41:27 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/twisted/ChangeLog,v 1.34 2004/05/06 17:50:37 lordvan Exp $
+
+*twisted-1.2.1_alpha2 (06 May 2004)
+
+  06 May 2004; Thomas Raschbacher <lordvan@gentoo.org> twisted-1.2.0.ebuild,
+  +twisted-1.2.1_alpha2.ebuild:
+  added 1.2.1_alpha2
+  marked 1.2.0 stable on x86
 
   22 Apr 2004; Bryan Østergaard <kloeri@gentoo.org> twisted-1.2.0.ebuild:
   Added ~alpha to keywords.
