--- a/app-text/gsview/ChangeLog
+++ b/app-text/gsview/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-text/gsview
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-text/gsview/ChangeLog,v 1.3 2004/02/29 18:10:25 aliz Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-text/gsview/ChangeLog,v 1.4 2004/05/07 10:31:11 lanius Exp $
+
+  07 May 2004; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
+  mark x86
 
   13 Dec 2003; Heinrich Wendel <lanius@gentoo.org> gsview-4.5.ebuild:
   fixed some typos, added `use doc` functionality
