--- a/media-sound/audio-entropyd/ChangeLog
+++ b/media-sound/audio-entropyd/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/audio-entropyd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-sound/audio-entropyd/ChangeLog,v 1.5 2004/04/08 00:39:58 pebenito Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-sound/audio-entropyd/ChangeLog,v 1.6 2004/05/07 20:21:07 tseng Exp $
+
+  07 May 2004; Brandon Hale <tseng@gentoo.org> audio-entropyd-0.0.6.ebuild:
+  Remove S=
 
   07 Apr 2004; Chris PeBenito <pebenito@gentoo.org>
   audio-entropyd-0.0.6.ebuild:
