--- a/sys-apps/module-init-tools/ChangeLog
+++ b/sys-apps/module-init-tools/ChangeLog
@@ -1,6 +1,13 @@
 # ChangeLog for sys-apps/module-init-tools
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.60 2004/05/03 20:53:27 avenj Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/module-init-tools/ChangeLog,v 1.61 2004/05/07 22:00:17 agriffis Exp $
+
+*module-init-tools-3.0-r2 (07 May 2004)
+
+  07 May 2004; Aron Griffis <agriffis@gentoo.org>
+  +module-init-tools-3.0-r2.ebuild:
+  Add patch to allow --assume-kernel option to generate-modprobe.conf for bug
+  49926
 
 *module-init-tools-3.0-r1
   03 May 2004; Jon Portnoy <avenj@gentoo.org> module-init-tools-3.0-r1.ebuild :
