--- a/sys-apps/hotplug/ChangeLog
+++ b/sys-apps/hotplug/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/hotplug
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hotplug/ChangeLog,v 1.39 2004/04/15 17:20:34 ciaranm Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hotplug/ChangeLog,v 1.40 2004/05/07 23:28:10 gregkh Exp $
+
+  07 May 2004; Greg Kroah-Hartman <gregkh@gentoo.org>
+  -hotplug-20020826-r2.ebuild, -hotplug-20030501-r2.ebuild,
+  -hotplug-20030805-r1.ebuild, -hotplug-20030805.ebuild,
+  -hotplug-20040311.ebuild, -hotplug-20040329.ebuild:
+  removed a bunch of old .ebuilds
 
   15 Apr 2004; Ciaran McCreesh <ciaranm@gentoo.org> hotplug-20040401.ebuild:
   Stable on sparc
