--- a/sys-apps/hotplug/ChangeLog
+++ b/sys-apps/hotplug/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for sys-apps/hotplug
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/hotplug/ChangeLog,v 1.40 2004/05/07 23:28:10 gregkh Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/hotplug/ChangeLog,v 1.41 2004/05/07 23:44:49 gregkh Exp $
+
+  07 May 2004; Greg Kroah-Hartman <gregkh@gentoo.org> hotplug-20040401.ebuild:
+  fix bug #50376 to the hotplug-20040401.ebuild file
+  (very minor, doesn't deserve a bump.)
 
   07 May 2004; Greg Kroah-Hartman <gregkh@gentoo.org>
   -hotplug-20020826-r2.ebuild, -hotplug-20030501-r2.ebuild,
