--- a/net-libs/openh323/ChangeLog
+++ b/net-libs/openh323/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/openh323
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-libs/openh323/ChangeLog,v 1.40 2004/04/27 18:21:48 agriffis Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-libs/openh323/ChangeLog,v 1.41 2004/05/09 14:15:22 dholm Exp $
+
+  09 May 2004; David Holm <dholm@gentoo.org> openh323-1.13.5.ebuild:
+  Fixed dependencies, readded to ~ppc.
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> openh323-1.13.5.ebuild:
   Add flag-o-matic for bug 49179
