--- a/app-emacs/view-process/ChangeLog
+++ b/app-emacs/view-process/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-emacs/view-process
-# Copyright 2002-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/view-process/ChangeLog,v 1.3 2003/11/12 07:49:10 mkennedy Exp $
+# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/view-process/ChangeLog,v 1.4 2004/05/11 04:31:28 weeve Exp $
+
+  10 May 2004; Jason Wever <weeve@gentoo.org> view-process-2.4-r1.ebuild:
+  Added ~sparc keyword to help resolve bug #50695.
 
 *view-process-2.4-r1 (12 Nov 2003)
 
