--- a/net-mail/fetchyahoo/ChangeLog
+++ b/net-mail/fetchyahoo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/fetchyahoo
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchyahoo/ChangeLog,v 1.10 2004/05/10 19:19:54 kanaka Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-mail/fetchyahoo/ChangeLog,v 1.11 2004/05/12 15:17:13 dholm Exp $
+
+  12 May 2004; David Holm <dholm@gentoo.org> fetchyahoo-2.8.0.ebuild:
+  Added to ~ppc.
 
 *fetchyahoo-2.8.0 (10 May 2004)
 
