--- a/gnome-base/gnome-vfs/ChangeLog
+++ b/gnome-base/gnome-vfs/ChangeLog
@@ -1,6 +1,16 @@
 # ChangeLog for gnome-base/gnome-vfs
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.209 2006/08/18 22:59:37 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-vfs/ChangeLog,v 1.211 2006/09/06 05:10:14 kumba Exp $
+
+  06 Sep 2006; Joshua Kinard <kumba@gentoo.org> gnome-vfs-1.0.5-r4.ebuild,
+  gnome-vfs-2.12.1.1-r1.ebuild, gnome-vfs-2.12.2.ebuild,
+  gnome-vfs-2.14.2.ebuild, gnome-vfs-2.14.2-r1.ebuild:
+  Removing all mips keywords except from latest stable to fix mips
+  dependencies for eliminating gnome support.
+
+  19 Aug 2006; Bryan Østergaard <kloeri@gentoo.org>
+  gnome-vfs-2.14.2-r1.ebuild:
+  Add ~ia64 keyword.
 
   18 Aug 2006; John N. Laliberte <allanonjl@gentoo.org>
   gnome-vfs-1.0.5-r4.ebuild:
