--- a/dev-ruby/ruby-panel-applet2/ChangeLog
+++ b/dev-ruby/ruby-panel-applet2/ChangeLog
@@ -1,6 +1,15 @@
 # ChangeLog for dev-ruby/ruby-panel-applet2
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-panel-applet2/Attic/ChangeLog,v 1.12 2010/01/16 06:17:30 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ruby-panel-applet2/Attic/ChangeLog,v 1.14 2010/04/18 12:31:36 nixnut Exp $
+
+  18 Apr 2010; <nixnut@gentoo.org> ruby-panel-applet2-0.19.1.ebuild:
+  ppc stable #295942
+
+*ruby-panel-applet2-0.19.3 (16 Jan 2010)
+
+  16 Jan 2010; Hans de Graaff <graaff@gentoo.org>
+  +ruby-panel-applet2-0.19.3.ebuild:
+  Version bump. Now uses ruby-ng-gnome2 eclass.
 
   16 Jan 2010; Hans de Graaff <graaff@gentoo.org>
   -ruby-panel-applet2-0.16.0.ebuild, -ruby-panel-applet2-0.19.0.ebuild:
