--- a/dev-ruby/treetop/ChangeLog
+++ b/dev-ruby/treetop/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-ruby/treetop
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/ChangeLog,v 1.21 2010/10/09 07:47:17 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/treetop/ChangeLog,v 1.23 2010/10/25 02:04:46 jer Exp $
+
+  25 Oct 2010; Jeroen Roovers <jer@gentoo.org> treetop-1.4.8.ebuild:
+  Marked ~hppa (bug #337956).
+
+  09 Oct 2010; Hans de Graaff <graaff@gentoo.org> treetop-1.4.8.ebuild:
+  Depend on rspec-1.
 
   09 Oct 2010; Hans de Graaff <graaff@gentoo.org> -treetop-1.4.5.ebuild,
   -treetop-1.4.7.ebuild:
